--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ buildscript
 apply plugin: 'forge'
 
 version = "1.1.0"
-group= "to.uk.ilexiconn.fossilcraft"
+group= "com.ilexiconn.fossilcraft"
 archivesBaseName = "fossilcraft"
 
 minecraft
 {
-    version = "1.7.2-10.12.1.1103"
+    version = "1.7.2-10.12.1.1110"
     assetDir = "minecraft/assets"
 }
 
