--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,14 @@
 *.ipr
 *.iws
 *.txt
-.classpath
-.project
+.classpath/
+.project/
 .settings/
 .gradle/
 build/
 minecraft/
 out/
-/bin
-/config/
+bin
+config/
 logs/
 saves/
