--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@
 .settings/
 .gradle/
 minecraft/
-build/
+build/classes/
+build/dependency-cache/
+build/natives/
+build/resources/
+build/sources/
+build/tmp/
 out/
 bin
 config/
