--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,77 @@
 buildscript
+{
+    repositories
+    {
+        mavenCentral()
+        maven
         {
-            repositories
-                    {
-                        mavenCentral()
-                        maven
-                                {
-                                    name = "forge"
-                                    url = "http://files.minecraftforge.net/maven"
-                                }
-                        maven
-                                {
-                                    name = "sonatype"
-                                    url = "https://oss.sonatype.org/content/repositories/snapshots/"
-                                }
-                    }
-            dependencies
-                    {
-                        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-                    }
+            name = "forge"
+            url = "http://files.minecraftforge.net/maven"
         }
+        maven
+        {
+            name = "sonatype"
+            url = "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
+    }
+    dependencies
+    {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+    }
+}
 
 apply plugin: 'forge'
 
-version = "1.1.0"
+def root = project.rootProject
+if (!root.hasProperty("startTime"))
+{
+    root.startTime = new Date()
+}
+
+version = "1.1.0" + getDate()
 group = "com.ilexiconn.jurassicraft"
 archivesBaseName = "jurassicraft"
+libsDirName = '../artifacts'
+
+def getDate() 
+{
+    def date = new Date()
+    def formattedDate = date.format('_yyyy-MM-dd_HH-mm-ss')
+    return formattedDate
+}
 
 minecraft
-        {
-            version = "1.7.2-10.12.1.1117"
-            if (file('../run').exists())
-			{
-                assetDir = "../run/assets"
-            } 
-			else
-			{
-                assetDir = "minecraft/assets"
-            }
-        }
+{
+    version = "1.7.2-10.12.1.1117"
+    if (file('../run').exists())
+	{
+		assetDir = "../run/assets"
+	}
+    else
+	{
+		assetDir = "minecraft/assets"
+	}
+}
 
 dependencies
-        {
+{
 
-        }
+}
 
 processResources
-        {
-            inputs.property "version", project.version
-            inputs.property "mcversion", project.minecraft.version
+{
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
 
-            from(sourceSets.main.resources.srcDirs)
-                    {
-                        include 'mcmod.info'
+    from(sourceSets.main.resources.srcDirs)
+    {
+        include 'mcmod.info'
 
-                        expand 'version': project.version, 'mcversion': project.minecraft.version
-                    }
+        expand 'version': project.version, 'mcversion': project.minecraft.version
+    }
 
-            from(sourceSets.main.resources.srcDirs)
-                    {
-                        exclude 'mcmod.info'
-                    }
-        }
+    from(sourceSets.main.resources.srcDirs)
+    {
+        exclude 'mcmod.info'
+    }
+}
