--- a/build.gradle
+++ b/build.gradle
@@ -22,23 +22,10 @@ buildscript
 
 apply plugin: 'forge'
 
-def root = project.rootProject
-if (!root.hasProperty("startTime"))
-{
-    root.startTime = new Date()
-}
-
-version = "1.1.0" + getDate()
+version = "1.1.0_SNAPSHOT"
 group = "com.ilexiconn.jurassicraft"
 archivesBaseName = "jurassicraft"
 libsDirName = '../target'
-
-def getDate() 
-{
-    def date = new Date()
-    def formattedDate = date.format('_yyyy-MM-dd_HH-mm-ss')
-    return formattedDate
-}
 
 minecraft
 {
