--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -1,6 +1,6 @@
 [
     {
-        "dinoName": "TestDino",
+        "dinoName": "Ankylosaur",
         "dinoSpeed": 20,
         "dinoHealth": 20,
         "sizeMultiplier":1.0,
