--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -22,5 +22,17 @@
         "livingSound2":"jurassicraft:brac3",
         "hurtSound":"jurassicraft:brac2",
         "deathSound":"jurassicraft:brac4"
+    },
+    {
+        "dinoName":"Velociraptor",
+        "dinoSpeed":1.3,
+        "dinoHealth":50,
+        "dinoScale":1,
+        "hitboxSizeXZ":1.9,
+        "hitboxSizeY":1.6,
+        "livingSound1":"jurassicraft:RapHiss01",
+        "livingSound2":"jurassicraft:RapHiss02",
+        "hurtSound":"jurassicraft:RapAttack01",
+        "deathSound":"jurassicraft:RapAttack02"
     }
 ]
