--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 buildscript
 {
     repositories
-	{
+    {
         mavenCentral()
         maven
-		{
+        {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
         maven
-		{
+        {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
     }
     dependencies
-	{
+    {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
@@ -30,7 +30,14 @@ libsDirName = '../target'
 minecraft
 {
     version = "1.7.2-10.12.2.1128"
-    assetDir = "minecraft/assets"
+    if (file('../run').exists()) 
+    {
+        assetDir = "../run/assets"
+    }
+    else
+    {
+        assetDir = "minecraft/assets"
+    }
 }
 
 processResources
@@ -39,14 +46,14 @@ processResources
     inputs.property "mcversion", project.minecraft.version
 
     from(sourceSets.main.resources.srcDirs)
-	{
+    {
         include 'mcmod.info'
                 
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
         
     from(sourceSets.main.resources.srcDirs)
-	{
+    {
         exclude 'mcmod.info'
     }
 }
