--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -24,5 +24,18 @@
         "livingSound2":"jurassicraft:brac3",
         "hurtSound":"jurassicraft:brac2",
         "deathSound":"jurassicraft:brac4"
+    },
+    {
+        "id":2,
+        "dinoName":"Velociraptor",
+        "dinoSpeed":0.25,
+        "dinoHealth":80,
+        "dinoScale":1.2,
+        "hitboxSizeXZ:":1.9,
+        "hitboxSizeY":1.5,
+        "livingSound1":"jurassicraft:RapHiss01",
+        "livingSound2":"jurassicraft:RapHiss02",
+        "hurtSound":"jurassicraft:RapAttack01",
+        "deathSound":"jurassicraft:RapAttack02"
     }
 ]
