--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -37,5 +37,18 @@
         "livingSound2":"jurassicraft:RapHiss02",
         "hurtSound":"jurassicraft:RapAttack01",
         "deathSound":"jurassicraft:RapAttack02"
+    },
+    {
+        "id":3,
+        "dinoName":"Stegosaur",
+        "dinoSpeed":0.23,
+        "dinoHealth":90,
+        "dinoScale":2.1,
+        "hitboxSizeXZ":3,
+        "hitboxSizeY":3,
+        "livingSound1":"jurassicraft:stego1",
+        "livingSound2":"jurassicraft:stego2",
+        "hurtSound":"jurassicraft:stego1",
+        "deathSound":"jurassicraft:stego2"
     }
 ]
