--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -50,5 +50,18 @@
         "livingSound2":"jurassicraft:stego2",
         "hurtSound":"jurassicraft:stego1",
         "deathSound":"jurassicraft:stego2"
+    },
+    {
+        "id":4,
+        "dinoName":"Triceratops",
+        "dinoSpeed":0.23,
+        "dinoHealth":92,
+        "dinoScale":2,
+        "hitboxSizeXZ":3.5,
+        "hitboxSizeY":3.5,
+        "livingSound1":"jurassicraft:tric1",
+        "livingSound2":"jurassicraft:tric1",
+        "hurtSound":"jurassicraft:tric2",
+        "deathSound":"jurassicraft:tric3"
     }
 ]
