Added coelacanth, tweaked raptor leap

--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -63,5 +63,18 @@
         "livingSound2":"jurassicraft:tric1",
         "hurtSound":"jurassicraft:tric2",
         "deathSound":"jurassicraft:tric3"
+    },
+    {
+        "id":5,
+        "dinoName":"Coelacanth",
+        "dinoSpeed":0.2,
+        "dinoHealth":10,
+        "dinoScale":1,
+        "hitboxSizeXZ":1,
+        "hitboxSizeY":1,
+        "livingSound1":null,
+        "livingSound2":null,
+        "hurtSound": null,
+        "deathSound": null
     }
 ]
