--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,14 @@ buildscript
 
 apply plugin: 'forge'
 
-version = "1.1.0_SNAPSHOT"
-group= "com.ilexiconn.jurassicraft"
+version = "1.1.0"
+group= "to.uk.ilexiconn.jurassicraft"
 archivesBaseName = "JurassiCraft"
+libsDirName = '../target'
 
 minecraft
 {
-    version = "1.7.10_pre4-10.12.2.1148-prerelease"
+    version = "1.7.2-10.12.2.1147"
     assetDir = "minecraft/assets"
 }
 
