--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -67,11 +67,24 @@
     {
         "id":5,
         "dinoName":"Coelacanth",
-        "dinoSpeed":0.2,
-        "dinoHealth":10,
+        "dinoSpeed":0.1,
+        "dinoHealth":3,
         "dinoScale":1,
         "hitboxSizeXZ":1,
         "hitboxSizeY":1,
+        "livingSound1":null,
+        "livingSound2":null,
+        "hurtSound": null,
+        "deathSound": null
+    },
+    {
+        "id":6,
+        "dinoName":"Tyrannosaurus",
+        "dinoSpeed":0.13,
+        "dinoHealth":100,
+        "dinoScale":7,
+        "hitboxSizeXZ":5,
+        "hitboxSizeY":6,
         "livingSound1":null,
         "livingSound2":null,
         "hurtSound": null,
