--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -72,13 +72,26 @@
         "dinoScale":1.2,
         "hitboxSizeXZ":0.5,
         "hitboxSizeY":0.5,
-        "livingSound1":"",
-        "livingSound2":"",
-        "hurtSound":"",
-        "deathSound":""
+        "livingSound1":null,
+        "livingSound2":null,
+        "hurtSound":null,
+        "deathSound":null
     }
     {
         "id":6,
+        "dinoName":"Tyrannosaurus",
+        "dinoSpeed":0.13,
+        "dinoHealth":100,
+        "dinoScale":7,
+        "hitboxSizeXZ":5,
+        "hitboxSizeY":6,
+        "livingSound1":null,
+        "livingSound2":null,
+        "hurtSound": null,
+        "deathSound": null
+    }
+    {
+        "id":7,
         "dinoName":"Gallimimus",
         "dinoSpeed":0.3,
         "dinoHealth":40,
@@ -89,5 +102,5 @@
         "livingSound2":"jurassicraft:gali2",
         "hurtSound":"jurassicraft:gali3",
         "deathSound":"jurassicraft:gali3"
-    },
+    }
 ]
