--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -102,5 +102,44 @@
         "livingSound2":"jurassicraft:gali2",
         "hurtSound":"jurassicraft:gali3",
         "deathSound":"jurassicraft:gali3"
+    },
+    {
+        "id":8,
+        "dinoName":"Hypsilophodon",
+        "dinoSpeed":0.3,
+        "dinoHealth":40,
+        "dinoScale":1.7,
+        "hitboxSizeXZ":1.7,
+        "hitboxSizeY":1.7,
+        "livingSound1":null,
+        "livingSound2":null,
+        "hurtSound":null,
+        "deathSound":null
+    },
+    {
+        "id":9,
+        "dinoName":"Leaellynasaur",
+        "dinoSpeed":0.3,
+        "dinoHealth":25,
+        "dinoScale":1,
+        "hitboxSizeXZ":1,
+        "hitboxSizeY":1,
+        "livingSound1":"jurassicraft:leae1",
+        "livingSound2":"jurassicraft:leae1",
+        "hurtSound":"jurassicraft:leae1",
+        "deathSound":"jurassicraft:leae1"
+    },
+    {
+        "id":10,
+        "dinoName":"Herrerasaur",
+        "dinoSpeed":0.3500020,
+        "dinoHealth":40,
+        "dinoScale":1.4,
+        "hitboxSizeXZ":2,
+        "hitboxSizeY":2,
+        "livingSound1":"jurassicraft:herr1",
+        "livingSound2":"jurassicraft:herr2",
+        "hurtSound":"jurassicraft:herr1",
+        "deathSound":"jurassicraft:herr2"
     }
 ]
