--- a/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
+++ b/src/main/java/com/ilexiconn/jurassicraft/data/entity/jurassicraft.cfg
@@ -141,5 +141,31 @@
         "livingSound2":"jurassicraft:herr2",
         "hurtSound":"jurassicraft:herr1",
         "deathSound":"jurassicraft:herr2"
+    },
+    {
+        "id":11,
+        "dinoName":"Parasaurolophus",
+        "dinoSpeed":0.200020,
+        "dinoHealth":60,
+        "dinoScale":2.1,
+        "hitboxSizeXZ":3,
+        "hitboxSizeY":3,
+        "livingSound1":"jurassicraft:para1",
+        "livingSound2":"jurassicraft:para1",
+        "hurtSound":"jurassicraft:para2",
+        "deathSound":"jurassicraft:para2"
+    },
+    {
+        "id":12,
+        "dinoName":"Meganeura",
+        "dinoSpeed":0.200020,
+        "dinoHealth":60,
+        "dinoScale":1.5,
+        "hitboxSizeXZ":1,
+        "hitboxSizeY":1,
+        "livingSound1":"jurassicraft:para1",
+        "livingSound2":"jurassicraft:para1",
+        "hurtSound":"jurassicraft:para2",
+        "deathSound":"jurassicraft:para2"
     }
 ]
