--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript
 
 apply plugin: 'forge'
 
-version = "1.2.0"
+version = "1.2.3"
 group= "to.uk.ilexiconn.jurassicraft"
 archivesBaseName = "JurassiCraft"
 libsDirName = '../target'
@@ -30,7 +30,7 @@ libsDirName = '../target'
 minecraft
 {
     version = "1.7.10-10.13.0.1180"
-    assetDir = "minecraft/assets"
+    runDir = "minecraft"
 }
 
 processResources
@@ -41,6 +41,7 @@ processResources
     from(sourceSets.main.resources.srcDirs)
 	{
         include 'mcmod.info'
+		include 'changelog.info'
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
         
