--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,16 @@
-buildscript
-{
-    repositories
-	{
+buildscript {
+    repositories {
         mavenCentral()
-        maven
-		{
+        maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven
-		{
+        maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
     }
-    dependencies
-	{
+    dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
@@ -23,44 +18,72 @@ buildscript
 apply plugin: 'forge'
 
 version = "1.2.4"
-group= "to.uk.ilexiconn.jurassicraft"
+group = "ilexiconn.jurassicraft"
 archivesBaseName = "JurassiCraft"
-libsDirName = '../target'
 
-minecraft
-{
-    version = "1.7.10-10.13.0.1180"
+configurations {
+    repoUploadFTP
+}
+
+minecraft {
+    version = "1.7.10-10.13.1.1213-new"
     runDir = "minecraft"
 }
 
-repositories
-{
-    maven
-    {
-        name = "ilexiconn"
-        url = "http://ilexiconn.uk.to/maven/"
-    }
-}
-
-dependencies
-{
-    compile 'ilexiconn:LLib:1.7.10-0.1.0-7:dev'
-}
-
 processResources
-{
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+        {
+            inputs.property "version", project.version
+            inputs.property "mcversion", project.minecraft.version
 
-    from(sourceSets.main.resources.srcDirs)
-	{
-        include 'mcmod.info'
-		include 'changelog.info'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-        
-    from(sourceSets.main.resources.srcDirs)
-	{
-        exclude 'mcmod.info'
+            from(sourceSets.main.resources.srcDirs) {
+                include 'mcmod.info'
+                include 'changelog.info'
+                expand 'version':project.version, 'mcversion':project.minecraft.version
+            }
+
+            from(sourceSets.main.resources.srcDirs) {
+                exclude 'mcmod.info'
+            }
+        }
+
+dependencies {
+    repoUploadFTP([
+            'org.apache.maven.wagon:wagon-ftp:2.2',
+            'org.apache.maven.wagon:wagon-http:2.2',
+    ])
+}
+
+jar {
+    classifier = 'universal'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'src'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task devJar(type: Jar) {
+    classifier = 'dev'
+    from sourceSets.main.output
+}
+
+artifacts {
+    archives sourcesJar, javadocJar, devJar
+}
+
+uploadArchives {
+    def username  = rootProject.getProperty('upload.username')?.trim()
+    def password  = rootProject.getProperty('upload.password')?.trim()
+
+    repositories.mavenDeployer {
+        configuration = configurations.repoUploadFTP
+        repository(url: 'ftp://ilexiconn.uk.to/public_html/maven') {
+            authentication(userName: username, password: password)
+        }
     }
 }
